--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ body,
 }
 .form__grid__row {
   display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-template-columns: repeat(5, minmax(0, 1fr));
   border-bottom: 1px solid dimgray;
   cursor: pointer;
 }
@@ -65,7 +65,7 @@ body,
   cursor: default;
 }
 .form__grid__col, .form__grid__col--header {
-  padding: 1rem 0.5rem;
+  padding: 0.5rem 0.25rem;
   word-wrap: break-word;
   word-break: break-all;
 }
@@ -74,6 +74,11 @@ body,
   text-shadow: 2px 2px 0 rgb(25, 25, 25);
 }
 @media (min-width: 768px) {
+  .form__grid__col, .form__grid__col--header {
+    padding: 1rem 0.5rem;
+  }
+}
+@media (min-width: 1024px) {
   .form__grid__col, .form__grid__col--header {
     padding: 1rem;
   }
@@ -107,9 +112,6 @@ body,
   align-items: center;
 }
 .form__send input::-moz-placeholder {
-  color: rgb(240, 240, 240);
-}
-.form__send input:-ms-input-placeholder {
   color: rgb(240, 240, 240);
 }
 .form__send input::placeholder {
