--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,15 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 90%;
+}
+@media (min-width: 768px) {
+  html {
+    font-size: 100%;
+  }
+}
+
 body,
 #root {
   width: 100%;
@@ -19,7 +28,7 @@ body,
   line-height: 1.2;
   background: rgb(50, 50, 50);
   color: rgb(240, 240, 240);
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .nav {
@@ -64,10 +73,19 @@ body,
 .form__grid__row:has(.form__grid__col--header) {
   cursor: default;
 }
+.form__grid__row > div:nth-child(1), .form__grid__row > div:nth-child(4), .form__grid__row > div:nth-child(5) {
+  text-align: center;
+}
 .form__grid__col, .form__grid__col--header {
   padding: 0.5rem 0.25rem;
   word-wrap: break-word;
   word-break: break-all;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.form__grid__col:nth-child(1), .form__grid__col--header:nth-child(1), .form__grid__col:nth-child(4), .form__grid__col--header:nth-child(4), .form__grid__col:nth-child(5), .form__grid__col--header:nth-child(5) {
+  justify-content: center;
 }
 .form__grid__col--header {
   font-weight: bold;
@@ -82,6 +100,29 @@ body,
   .form__grid__col, .form__grid__col--header {
     padding: 1rem;
   }
+}
+.form__grid__col input[type=number], .form__grid__col--header input[type=number] {
+  width: clamp(40px, 40px + 4vw, 80px);
+  padding: 1rem;
+  font: inherit;
+  border: none;
+  outline: none;
+  text-align: center;
+  -webkit-appearance: textfield;
+          appearance: textfield;
+  -moz-appearance: textfield;
+  box-shadow: 0 2px 0 0 rgb(248, 248, 248);
+  background-color: rgb(248, 248, 248);
+  color: rgb(50, 50, 50);
+  font-weight: bold;
+}
+.form__grid__col input[type=number]::-webkit-outer-spin-button, .form__grid__col--header input[type=number]::-webkit-outer-spin-button, .form__grid__col input[type=number]::-webkit-inner-spin-button, .form__grid__col--header input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.form__grid__col__qtyNumber {
+  width: clamp(40px, 40px + 4vw, 80px);
+  padding: 1rem;
 }
 .form__grid:has(+ form[disabled]) {
   pointer-events: none;
@@ -151,7 +192,7 @@ body,
   color: darkgray;
 }
 .form__send button.success {
-  color: black;
+  color: rgb(50, 50, 50);
 }
 .form__send button[disabled] {
   pointer-events: none;
