--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,14 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 90%;
+
+    @media(min-width: 768px) {
+        font-size: 100%;
+    }
+}
+
 body,
 #root {
     width: 100%;
@@ -19,7 +27,7 @@ body,
     line-height: 1.2;
     background: rgb(50, 50, 50);
     color: rgb(240, 240, 240);
-    font-size: 1rem;
+    font-size: .8rem;
 }
 
 .nav {
@@ -65,12 +73,27 @@ body,
             &:has(.form__grid__col--header) {
                 cursor: default;
             }
+
+            &>div:nth-child(1),
+            &>div:nth-child(4),
+            &>div:nth-child(5) {
+                text-align: center;
+            }
         }
 
         &__col {
             padding: .5rem .25rem;
             word-wrap: break-word;
             word-break: break-all;
+            display: flex;
+            justify-content: start;
+            align-items: center;
+
+            &:nth-child(1),
+            &:nth-child(4),
+            &:nth-child(5) {
+                justify-content: center
+            }
 
             &--header {
                 @extend .form__grid__col;
@@ -83,6 +106,32 @@ body,
             }
 
             @media(min-width: 1024px) {
+                padding: 1rem;
+            }
+
+            input[type=number] {
+                width: clamp(40px, 40px + 4vw, 80px);
+                padding: 1rem;
+                font: inherit;
+                border: none;
+                outline: none;
+                text-align: center;
+                appearance: textfield;
+                -moz-appearance: textfield;
+                box-shadow: 0 2px 0 0 rgb(248, 248, 248);
+                background-color: rgb(248,248,248);
+                color: rgb(50,50,50);
+                font-weight: bold;
+
+                &::-webkit-outer-spin-button,
+                &::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                }
+            }
+
+            &__qtyNumber {
+                width: clamp(40px, 40px + 4vw, 80px);
                 padding: 1rem;
             }
         }
@@ -163,7 +212,7 @@ body,
             }
 
             &.success {
-                color: black
+                color: rgb(50,50,50)
             }
 
             &[disabled] {
