--- a/src/app.scss
+++ b/src/app.scss
@@ -119,8 +119,8 @@ body,
                 appearance: textfield;
                 -moz-appearance: textfield;
                 box-shadow: 0 2px 0 0 rgb(248, 248, 248);
-                background-color: rgb(248,248,248);
-                color: rgb(50,50,50);
+                background-color: rgb(248, 248, 248);
+                color: rgb(50, 50, 50);
                 font-weight: bold;
 
                 &::-webkit-outer-spin-button,
@@ -209,10 +209,6 @@ body,
 
             &.loading {
                 color: darkgray
-            }
-
-            &.success {
-                color: rgb(50,50,50)
             }
 
             &[disabled] {
