--- a/src/app.scss
+++ b/src/app.scss
@@ -129,6 +129,10 @@ body,
                     -webkit-appearance: none;
                     margin: 0;
                 }
+
+                &.notValid {
+                    background-color: rgb(148, 148, 148);
+                }
             }
 
             &__qtyNumber {
