--- a/src/app.scss
+++ b/src/app.scss
@@ -56,6 +56,7 @@ body,
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    padding: 2rem .5rem;
 }
 
 .form {
@@ -63,6 +64,10 @@ body,
         display: grid;
         grid-template-columns: 1fr;
         place-content: center;
+
+        &:has(+form[disabled]) {
+            pointer-events: none;
+        }
 
         &__row {
             display: grid;
@@ -139,10 +144,6 @@ body,
                 width: clamp(40px, 40px + 4vw, 80px);
                 padding: 1rem;
             }
-        }
-
-        &:has(+form[disabled]) {
-            pointer-events: none;
         }
     }
 
@@ -222,4 +223,110 @@ body,
 
 .selected {
     background: crimson;
+}
+
+
+.admin-home {
+    display: flex;
+    width: 100%;
+    flex: 1;
+    z-index: 1;
+    max-width: 1200px;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem .5rem;
+
+    &__validation {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        font-size: clamp(2rem, 2rem + 10vw, 8rem);
+        line-height: 1;
+        padding: .5rem;
+
+        input {
+            font: inherit;
+            font-weight: bold;
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+            background: transparent;
+            outline: none;
+            border: none;
+            background: rgb(20, 20, 20);
+            color: rgb(248, 248, 248);
+            padding: 1rem;
+            border-bottom: 4px solid crimson;
+        }
+
+        &__btnContainer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+
+            button {
+                font: inherit;
+                font-size: .25em;
+                background: none;
+                outline: none;
+                border: none;
+                align-self: end;
+                font-weight: bold;
+                background: crimson;
+                padding: .5rem;
+                cursor: pointer;
+                color: rgb(248, 248, 248);
+
+                &:hover,
+                &:focus-visible {
+                    outline: 4px solid rgb(20, 20, 20)
+                }
+
+                &:active {
+                    scale: .9;
+                    outline: 4px solid rgb(20, 20, 20)
+                }
+            }
+
+            span {
+                font-size: .25em;
+                color: crimson;
+            }
+        }
+    }
+
+    &__main {
+        width: 100%;
+        max-width: 800px;
+        align-self: start;
+        font-size: 1rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        flex: 1;
+
+        details {
+            background: dimgray;
+
+            summary {
+                color: crimson;
+                cursor: pointer;
+                padding: .5rem;
+                font-weight: bold;
+                text-transform: uppercase;
+            }
+
+            summary span {
+                color: rgb(248, 248, 248);
+            }
+        }
+
+        &__noOrders{
+            text-align: center;
+        }
+    }
 }
