--- a/src/App.css
+++ b/src/App.css
@@ -57,12 +57,16 @@ body,
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  padding: 2rem 0.5rem;
 }
 
 .form__grid {
   display: grid;
   grid-template-columns: 1fr;
   place-content: center;
+}
+.form__grid:has(+ form[disabled]) {
+  pointer-events: none;
 }
 .form__grid__row {
   display: grid;
@@ -127,9 +131,6 @@ body,
 .form__grid__col__qtyNumber {
   width: clamp(40px, 40px + 4vw, 80px);
   padding: 1rem;
-}
-.form__grid:has(+ form[disabled]) {
-  pointer-events: none;
 }
 .form__send {
   display: flex;
@@ -202,4 +203,96 @@ body,
 
 .selected {
   background: crimson;
+}
+
+.admin-home {
+  display: flex;
+  width: 100%;
+  flex: 1;
+  z-index: 1;
+  max-width: 1200px;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem 0.5rem;
+}
+.admin-home__validation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  font-size: clamp(2rem, 2rem + 10vw, 8rem);
+  line-height: 1;
+  padding: 0.5rem;
+}
+.admin-home__validation input {
+  font: inherit;
+  font-weight: bold;
+  width: 100%;
+  max-width: 400px;
+  text-align: center;
+  background: transparent;
+  outline: none;
+  border: none;
+  background: rgb(20, 20, 20);
+  color: rgb(248, 248, 248);
+  padding: 1rem;
+  border-bottom: 4px solid crimson;
+}
+.admin-home__validation__btnContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.admin-home__validation__btnContainer button {
+  font: inherit;
+  font-size: 0.25em;
+  background: none;
+  outline: none;
+  border: none;
+  align-self: end;
+  font-weight: bold;
+  background: crimson;
+  padding: 0.5rem;
+  cursor: pointer;
+  color: rgb(248, 248, 248);
+}
+.admin-home__validation__btnContainer button:hover, .admin-home__validation__btnContainer button:focus-visible {
+  outline: 4px solid rgb(20, 20, 20);
+}
+.admin-home__validation__btnContainer button:active {
+  scale: 0.9;
+  outline: 4px solid rgb(20, 20, 20);
+}
+.admin-home__validation__btnContainer span {
+  font-size: 0.25em;
+  color: crimson;
+}
+.admin-home__main {
+  width: 100%;
+  max-width: 800px;
+  align-self: start;
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex: 1;
+}
+.admin-home__main details {
+  background: dimgray;
+}
+.admin-home__main details summary {
+  color: crimson;
+  cursor: pointer;
+  padding: 0.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.admin-home__main details summary span {
+  color: rgb(248, 248, 248);
+}
+.admin-home__main__noOrders {
+  text-align: center;
 }/*# sourceMappingURL=app.css.map */
