--- a/src/app.scss
+++ b/src/app.scss
@@ -30,6 +30,10 @@ body,
     font-size: .8rem;
 }
 
+button {
+    cursor: pointer;
+}
+
 .nav {
     padding: .25rem;
     background: crimson;
@@ -278,7 +282,6 @@ body,
                 font-weight: bold;
                 background: crimson;
                 padding: .5rem;
-                cursor: pointer;
                 color: rgb(248, 248, 248);
 
                 &:hover,
@@ -325,7 +328,7 @@ body,
             }
         }
 
-        &__noOrders{
+        &__noOrders {
             text-align: center;
         }
     }
